--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="layer">
             <img
               class="nft"
-              src="/assets/image-equilibrium.jpg"
+              src="/nft-preview/assets/image-equilibrium.jpg"
               alt="equilibrium"
             />
           </div>
@@ -24,18 +24,22 @@
 
         <section class="info">
           <div class="info-content">
-            <img src="/assets/icon-ethereum.svg" alt="" />
+            <img src="/nft-preview/assets/icon-ethereum.svg" alt="" />
             <h5 class="price">0.041 ETH</h5>
           </div>
 
           <div class="info-content">
-            <img src="/assets/icon-clock.svg" alt="" />
+            <img src="/nft-preview/assets/icon-clock.svg" alt="" />
             <h5 class="days">3 days left</h5>
           </div>
         </section>
 
         <footer>
-          <img src="/assets/image-avatar.png" alt="" class="avatar" />
+          <img
+            src="/nft-preview/assets/image-avatar.png"
+            alt=""
+            class="avatar"
+          />
           <p class="user-info">Creation of <a href="">Jules Wyvern</a></p>
         </footer>
       </section>
